<resources>
    <string name="app_name">Form</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="submit">Submit</string>
    <string name="hi">HI!</string>
    <string name="select_date">SELECT DATE</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="dob">DOB</string>
    <string name="str_continue">Continue</string>
    <string name="job">Job: </string>
    <string name="age">Age:</string>
    <string name="description">Description: </string>
    <string name="description_input">Describe yourself</string>
    <string name="job_input">What is your job?</string>
    <string name="sorry">sorry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>/>
</resources>