<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity"
    android:orientation="vertical"
    android:weightSum="4">



        <ImageView
        android:id="@+id/imageView"
        android:layout_width="203dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/blank_pic"
        />
        <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:layout_gravity="center_horizontal"
        />

        <TextView
        android:id="@+id/job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:layout_gravity="center_horizontal"
        />

        <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        />

        <TextView
        android:id="@+id/description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/description"
        android:layout_weight="1"
        />
</LinearLayout>

